# Govcon

./: .env.example  .env.production  .gitignore  CONTRIBUTING.md  Caddyfile  DEPLOYMENT.md  DEPLOY_VPS_GUIDE.md  Dockerfile  Makefile  PRODUCTION_READINESS.md  QUICKSTART_DEPLOY.md  README.md  SETUP_IMPROVEMENTS.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
config/templates/: executive_summary.md  sdvosb_narrative.md
docs/: ARCHITECTURE.md  EARLY_DISCOVERY_GUIDE.md  LOGIN_SETUP.md  QUICKSTART.md  QUICK_REFERENCE.md  SETUP_GUIDE.md
frontend/: .env.example  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx
frontend/src/pages/: AdminPanel.tsx  Dashboard.tsx  Login.tsx  Opportunities.tsx  OpportunityDetail.tsx  PreSolicitations.tsx  ProposalDetail.tsx  Proposals.tsx  Settings.tsx  SystemDashboard.tsx  Workflow.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/store/: authStore.ts
frontend/src/styles/: tokens.ts
frontend/src/types/: index.ts
scripts/: create_admin.sql  create_admin_user.py  create_test_opportunity.py  deploy-vps.sh  generate_workflow_report.py  import_knowledge_directory.py  init-db.sql  init_admin.py  manage.sh  migrate-to-r2.sh  reclassify_knowledge_documents.py  run_discovery_notifier.py  telegram_workflow_controller.py  upload_knowledge_document.py
src/govcon/: __init__.py  cli.py
src/govcon/agents/: __init__.py  approvals.py  bid_nobid.py  communications.py  discovery.py  monitoring.py  orchestrator.py  pricing.py  proposal_generation.py  solicitation_review.py
src/govcon/api/: __init__.py  main.py
src/govcon/api/routes/: agents.py  monitoring.py  opportunities.py  proposals.py  system.py  users.py  websocket.py  workflow.py
src/govcon/models/: __init__.py  audit.py  base.py  early_signals.py  knowledge.py  opportunity.py  pricing.py  proposal.py  user.py
src/govcon/services/: __init__.py  bls.py  early_discovery.py  gsa_calc.py  knowledge.py  llm.py  neco.py  sam_gov.py  vector_store.py
src/govcon/utils/: __init__.py  audit.py  config.py  database.py  logger.py  parsers.py  security.py
tests/: conftest.py  test_agents.py  test_approvals.py  test_models.py  test_proposal_generation.py  test_utils.py
